Fix strings in .cfg file generation

--- a/data_prep/create_experiments.ipynb
+++ b/data_prep/create_experiments.ipynb
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,29 +234,29 @@
     "    \n",
     "    config['rigidbody'] = {\n",
     "       'tolerance': 5,\n",
-    "       'ambig_fname': ambig_fname,\n",
-    "       'unambig_fname': unambig_fname\n",
+    "       'ambig_fname': f'\"{ambig_fname}\"',\n",
+    "       'unambig_fname': f'\"{unambig_fname}\"'\n",
     "    }\n",
     "\n",
-    "    config['caprieval_1'] = {'reference_fname': reference_pdb}\n",
-    "    config['caprieval_2'] = {'reference_fname': reference_pdb}\n",
+    "    config['caprieval_1'] = {'reference_fname': f'\"{reference_pdb}\"'}\n",
+    "    config['caprieval_2'] = {'reference_fname': f'\"{reference_pdb}\"'}\n",
     "\n",
     "    config['flexref'] = {\n",
     "       'tolerance': 5,\n",
-    "       'ambig_fname': ambig_fname,\n",
-    "       'unambig_fname': unambig_fname\n",
+    "       'ambig_fname': f'\"{ambig_fname}\"',\n",
+    "       'unambig_fname': f'\"{unambig_fname}\"'\n",
     "    }\n",
     "\n",
-    "    config['caprieval_3'] = {'reference_fname': reference_pdb}\n",
-    "    config['caprieval_4'] = {'reference_fname': reference_pdb}\n",
-    "    \n",
+    "    config['caprieval_3'] = {'reference_fname': f'\"{reference_pdb}\"'}\n",
+    "    config['caprieval_4'] = {'reference_fname': f'\"{reference_pdb}\"'}\n",
+    "\n",
     "    config['emref'] = {\n",
     "       'tolerance': 5,\n",
-    "       'ambig_fname': ambig_fname,\n",
-    "       'unambig_fname': unambig_fname\n",
+    "       'ambig_fname': f'\"{ambig_fname}\"',\n",
+    "       'unambig_fname': f'\"{unambig_fname}\"'\n",
     "    }\n",
     "\n",
-    "    config['caprieval_5'] = {'reference_fname': reference_pdb}\n",
+    "    config['caprieval_5'] = {'reference_fname': f'\"{reference_pdb}\"'}\n",
     "\n",
     " \n",
     "    ## Write the configuration to a file\n",
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
