--- a/scripts/3_experiment_generation/create_experiments.ipynb
+++ b/scripts/3_experiment_generation/create_experiments.ipynb
@@ -9,7 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shutil, os, sys, time\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -138,14 +148,12 @@
        "[2 rows x 27 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "experiments = pd.read_excel('../../Experiments.xlsx', sheet_name='Experiments')\n",
     "antibodies = pd.read_excel('../../Experiments.xlsx', sheet_name='Antibodies')\n",
     "antigens = pd.read_excel('../../Experiments.xlsx', sheet_name='Antigens')\n",
@@ -157,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Make AIR Restraints Files"
+    "## AIR Restraints File Logic"
    ]
   },
   {
@@ -205,6 +213,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -217,7 +232,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import configparser\n",
     " \n",
     "def create_config(\n",
@@ -304,7 +318,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for index, experiment in experiments.iterrows():\n",
+    "    ## Make experiment folders\n",
+    "    experiment_id = experiment['experiment_id']\n",
+    "    print(f\"Making folders for experiment {experiment_id}\")\n",
+    "    experiment_path = f\"../../data/experiments/{experiment_id}/\"\n",
+    "    os.makedirs(experiment_path, exist_ok=True)\n",
+    "\n",
+    "    ## Find corresponding antibody and antigen\n",
+    "    antibody_id = antibodies[antibodies['antibody_id'] == experiment['antibody_id']].iloc[0]\n",
+    "    antigen_id = antigens[antigens['antigen_id'] == experiment['antigen_id']].iloc[0]\n",
+    "\n",
+    "    ## Write AIR file for each candidate using active and passive residues\n",
+    "    active1 = experiment['antibody_active_residues'].replace('`','').split(',')\n",
+    "    passive1 = []\n",
+    "    active2 = experiment['antigen_active_residues'].replace('`','').split(',')\n",
+    "    passive2 = []\n",
+    "    candidate_path = f\"../../data/experiments/{experiment_id}/\"\n",
+    "    air_file_name = f\"{experiment_id}_air.tbl\"\n",
+    "    print(f\"Writing AIR file for {experiment_id}...\")\n",
+    "    write_air_file(active1, passive1, active2, passive2, segid1='A', segid2='B', output_file = f\"{experiment_path}{air_file_name}\")"
+   ]
   }
  ],
  "metadata": {
