--- a/scripts/3_experiment_generation/create_experiments.ipynb
+++ b/scripts/3_experiment_generation/create_experiments.ipynb
@@ -9,17 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import shutil, os, sys, time\n",
+    "import shutil, os, configparser\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "[2 rows x 27 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,12 +170,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Define function for creating AIR files\n",
-    "def write_air_file(active1, passive1, active2, passive2, segid1='A', segid2='B', output_file=\"air.tbl\"):\n",
+    "## Define functions for creating ambiguous AIR files\n",
+    "def write_ambig_air_file(active1, passive1, active2, passive2, segid1='A', segid2='B', output_file=\"ambig.tbl\"):\n",
     "    with open(output_file, \"w\") as output_file:\n",
     "        ## Convert residues to integers\n",
     "        active1 = [int(x) for x in active1]\n",
@@ -213,13 +213,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -228,18 +221,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import configparser\n",
-    " \n",
     "def create_config(\n",
     "      antibody_pdb = 'data/TEST_ANTIBODY.pdb',\n",
     "      antigen_pdb = 'data/TEST_ANTIGEN.pdb',\n",
     "      reference_pdb = 'data/TEST_MATCHED.pdb',\n",
     "      ambig_fname = \"data/ambig_TEST.tbl\",\n",
-    "      unambig_fname = \"data/unambig_TEST.tbl\",\n",
+    "      # unambig_fname = \"data/unambig_TEST.tbl\",\n",
     "      output_file = 'config.cfg'\n",
     "                  ):\n",
     "    \n",
@@ -260,8 +251,8 @@
     "    \n",
     "    config['rigidbody'] = {\n",
     "       'tolerance': 5,\n",
-    "       'ambig_fname': f'\"{ambig_fname}\"',\n",
-    "       'unambig_fname': f'\"{unambig_fname}\"'\n",
+    "       'ambig_fname': f'\"{ambig_fname}\"'#,\n",
+    "      #  'unambig_fname': f'\"{unambig_fname}\"'\n",
     "    }\n",
     "\n",
     "    config['caprieval_1'] = {'reference_fname': f'\"{reference_pdb}\"'}\n",
@@ -269,8 +260,8 @@
     "\n",
     "    config['flexref'] = {\n",
     "       'tolerance': 5,\n",
-    "       'ambig_fname': f'\"{ambig_fname}\"',\n",
-    "       'unambig_fname': f'\"{unambig_fname}\"'\n",
+    "       'ambig_fname': f'\"{ambig_fname}\"'#,\n",
+    "      #  'unambig_fname': f'\"{unambig_fname}\"'\n",
     "    }\n",
     "\n",
     "    config['caprieval_3'] = {'reference_fname': f'\"{reference_pdb}\"'}\n",
@@ -278,8 +269,8 @@
     "\n",
     "    config['emref'] = {\n",
     "       'tolerance': 5,\n",
-    "       'ambig_fname': f'\"{ambig_fname}\"',\n",
-    "       'unambig_fname': f'\"{unambig_fname}\"'\n",
+    "       'ambig_fname': f'\"{ambig_fname}\"'#,\n",
+    "      #  'unambig_fname': f'\"{unambig_fname}\"'\n",
     "    }\n",
     "\n",
     "    config['caprieval_5'] = {'reference_fname': f'\"{reference_pdb}\"'}\n",
@@ -305,12 +296,86 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "create_config(output_file = 'TEST_config.cfg')"
+    "## Loop Through Each Experiment and Make its Directory and Files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preparing experiment: FLD194__EPI1650\n",
+      "\tMaking experiment folders...\n",
+      "\tCopying antibody and antigen PDB files to experiment folder...\n",
+      "\tGenerating AIR file...\n",
+      "\tGenerating config file...\n",
+      "\tDone preparing the experiment files for FLD194__EPI1650!\n",
+      "Preparing experiment: FLD194__EPI4795\n",
+      "\tMaking experiment folders...\n",
+      "\tCopying antibody and antigen PDB files to experiment folder...\n",
+      "\tGenerating AIR file...\n",
+      "\tGenerating config file...\n",
+      "\tDone preparing the experiment files for FLD194__EPI4795!\n"
+     ]
+    }
+   ],
+   "source": [
+    "for index, experiment in experiments.iterrows():\n",
+    "    experiment_id = experiment['experiment_id']\n",
+    "    print(f\"Preparing experiment: {experiment_id}\")\n",
+    "\n",
+    "    ## Find corresponding rows in the antibody and antigen dataframes\n",
+    "    antibody = antibodies[antibodies['antibody_id'] == experiment['antibody_id']].iloc[0]\n",
+    "    antigen = antigens[antigens['antigen_id'] == experiment['antigen_id']].iloc[0]\n",
+    "\n",
+    "    ## Make experiment folders\n",
+    "    print(f\"\\tMaking experiment folders...\")\n",
+    "    experiment_path = f\"../../data/experiments/{experiment_id}/\"\n",
+    "    os.makedirs(experiment_path, exist_ok=True)\n",
+    "\n",
+    "    ## Copy antibody and antigen PDB files to experiment folder\n",
+    "    print(f\"\\tCopying antibody and antigen PDB files to experiment folder...\")\n",
+    "    antibody_pdb_path = f\"../../{antibody['antibody_pdb_path_renumbered']}\"\n",
+    "    antibody_pdb_filename = os.path.basename(antibody_pdb_path)\n",
+    "    antigen_pdb_path = f\"../../{antigen['antigen_pdb_path']}\"\n",
+    "    antigen_pdb_filename = os.path.basename(antigen_pdb_path)\n",
+    "\n",
+    "    shutil.copyfile(antibody_pdb_path, f\"{experiment_path}{antibody_pdb_filename}\")\n",
+    "    shutil.copyfile(antigen_pdb_path, f\"{experiment_path}{antigen_pdb_filename}\")\n",
+    "\n",
+    "    ## Copy reference PDB file to experiment folder\n",
+    "    reference_pdb_filename = '5a3i_chainsACD.pdb'\n",
+    "    shutil.copyfile(reference_pdb_filename, f\"{experiment_path}{reference_pdb_filename}\")\n",
+    "\n",
+    "    ## Generate AIR file for each experiment using active and passive residues\n",
+    "    active1 = antibody['antibody_active_residues'].replace('`','').split(',')\n",
+    "    passive1 = []\n",
+    "    active2 = antigen['antigen_active_residues'].replace('`','').split(',')\n",
+    "    passive2 = []\n",
+    "    candidate_path = f\"../../data/experiments/{experiment_id}/\"\n",
+    "    air_file_name = f\"{experiment_id}_air.tbl\"\n",
+    "    print(f\"\\tGenerating AIR file...\")\n",
+    "    write_ambig_air_file(active1, passive1, active2, passive2, segid1='A', segid2='B', output_file = f\"{experiment_path}{air_file_name}\")\n",
+    "\n",
+    "    ## Genearate config file for each experiment\n",
+    "    print(f\"\\tGenerating config file...\")\n",
+    "    create_config(\n",
+    "      antibody_pdb = antibody_pdb_filename,\n",
+    "      antigen_pdb = antigen_pdb_filename,\n",
+    "      reference_pdb = reference_pdb_filename,\n",
+    "      ambig_fname = air_file_name,\n",
+    "      # unambig_fname = \"data/unambig_TEST.tbl\",\n",
+    "      output_file = f\"{experiment_path}config.cfg\"\n",
+    "                  )\n",
+    "    \n",
+    "    print(f'\\tDone preparing the experiment files for {experiment_id}!')"
    ]
   },
   {
@@ -318,28 +383,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "for index, experiment in experiments.iterrows():\n",
-    "    ## Make experiment folders\n",
-    "    experiment_id = experiment['experiment_id']\n",
-    "    print(f\"Making folders for experiment {experiment_id}\")\n",
-    "    experiment_path = f\"../../data/experiments/{experiment_id}/\"\n",
-    "    os.makedirs(experiment_path, exist_ok=True)\n",
-    "\n",
-    "    ## Find corresponding antibody and antigen\n",
-    "    antibody_id = antibodies[antibodies['antibody_id'] == experiment['antibody_id']].iloc[0]\n",
-    "    antigen_id = antigens[antigens['antigen_id'] == experiment['antigen_id']].iloc[0]\n",
-    "\n",
-    "    ## Write AIR file for each candidate using active and passive residues\n",
-    "    active1 = experiment['antibody_active_residues'].replace('`','').split(',')\n",
-    "    passive1 = []\n",
-    "    active2 = experiment['antigen_active_residues'].replace('`','').split(',')\n",
-    "    passive2 = []\n",
-    "    candidate_path = f\"../../data/experiments/{experiment_id}/\"\n",
-    "    air_file_name = f\"{experiment_id}_air.tbl\"\n",
-    "    print(f\"Writing AIR file for {experiment_id}...\")\n",
-    "    write_air_file(active1, passive1, active2, passive2, segid1='A', segid2='B', output_file = f\"{experiment_path}{air_file_name}\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
