--- a/scripts/3_experiment_generation/create_experiments.ipynb
+++ b/scripts/3_experiment_generation/create_experiments.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -162,6 +163,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -213,6 +215,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -240,8 +243,8 @@
     "    config.read('antibody_antigen_template.cfg')\n",
     "\n",
     "    ## Update the configuration\n",
-    "    config['main'] = {'run_dir': \"TEST\",\n",
-    "                      'mode': \"batch\",\n",
+    "    config['main'] = {'run_dir': '\"./output\"',\n",
+    "                      'mode': '\"local\"',\n",
     "                      'concat':  5,\n",
     "                      'queue_limit': 100,\n",
     "                      'molecules': [\n",
@@ -296,6 +299,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
