--- a/scripts/3_experiment_generation/create_experiments.ipynb
+++ b/scripts/3_experiment_generation/create_experiments.ipynb
@@ -364,9 +364,12 @@
     "    active2 = antigen['antigen_active_residues'].replace('`','').split(',')\n",
     "    passive2 = []\n",
     "    candidate_path = f\"../../data/experiments/{experiment_id}/\"\n",
-    "    air_file_name = f\"{experiment_id}_air.tbl\"\n",
+    "    air_file_name = f\"ambig.tbl\"\n",
     "    print(f\"\\tGenerating AIR file...\")\n",
-    "    write_ambig_air_file(active1, passive1, active2, passive2, segid1='A', segid2='B', output_file = f\"{experiment_path}{air_file_name}\")\n",
+    "    write_ambig_air_file(active1, passive1,\n",
+    "                         active2, passive2,\n",
+    "                         segid1='A', segid2='B',\n",
+    "                         output_file = f\"{experiment_path}{air_file_name}\")\n",
     "\n",
     "    ## Genearate config file for each experiment\n",
     "    print(f\"\\tGenerating config file...\")\n",
@@ -376,8 +379,7 @@
     "      reference_pdb = reference_pdb_filename,\n",
     "      ambig_fname = air_file_name,\n",
     "      # unambig_fname = \"data/unambig_TEST.tbl\",\n",
-    "      output_file = f\"{experiment_path}config.cfg\"\n",
-    "                  )\n",
+    "      output_file = f\"{experiment_path}config.cfg\")\n",
     "    \n",
     "    print(f'\\tDone preparing the experiment files for {experiment_id}!')"
    ]
