--- a/scripts/3_experiment_generation/1_create_experiments.ipynb
+++ b/scripts/3_experiment_generation/1_create_experiments.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -70,9 +70,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>FLD194__EPI1650</td>\n",
-       "      <td>FLD194</td>\n",
-       "      <td>EPI1650</td>\n",
+       "      <td>H5.3__EPI2800361</td>\n",
+       "      <td>H5.3</td>\n",
+       "      <td>EPI2800361</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -94,9 +94,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>FLD194__EPI4795</td>\n",
-       "      <td>FLD194</td>\n",
-       "      <td>EPI4795</td>\n",
+       "      <td>AVFluIgG01__EPI454493</td>\n",
+       "      <td>AVFluIgG01</td>\n",
+       "      <td>EPI454493</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -122,44 +122,48 @@
        "</div>"
       ],
       "text/plain": [
-       "     experiment_id antibody_id antigen_id  submitted  haddock_best_cluster  \\\n",
-       "0  FLD194__EPI1650      FLD194    EPI1650      False                   NaN   \n",
-       "1  FLD194__EPI4795      FLD194    EPI4795      False                   NaN   \n",
+       "           experiment_id antibody_id  antigen_id  submitted  \\\n",
+       "0       H5.3__EPI2800361        H5.3  EPI2800361      False   \n",
+       "1  AVFluIgG01__EPI454493  AVFluIgG01   EPI454493      False   \n",
        "\n",
-       "   haddock_best_pdb_path  haddock_Nstruc  haddock_Evdw_plus_0.1Eelec  \\\n",
-       "0                    NaN             NaN                         NaN   \n",
-       "1                    NaN             NaN                         NaN   \n",
+       "   haddock_best_cluster  haddock_best_pdb_path  haddock_Nstruc  \\\n",
+       "0                   NaN                    NaN             NaN   \n",
+       "1                   NaN                    NaN             NaN   \n",
        "\n",
-       "   haddock_Evdw_plus_0.1Eelec_sd  haddock_Evdw  ...  haddock_AIRviol  \\\n",
-       "0                            NaN           NaN  ...              NaN   \n",
-       "1                            NaN           NaN  ...              NaN   \n",
+       "   haddock_Evdw_plus_0.1Eelec  haddock_Evdw_plus_0.1Eelec_sd  haddock_Evdw  \\\n",
+       "0                         NaN                            NaN           NaN   \n",
+       "1                         NaN                            NaN           NaN   \n",
        "\n",
-       "   haddock_AIRviol_sd  haddock_dihedviol  haddock_dihedviol_sd  haddock_BSA  \\\n",
-       "0                 NaN                NaN                   NaN          NaN   \n",
-       "1                 NaN                NaN                   NaN          NaN   \n",
+       "   ...  haddock_AIRviol  haddock_AIRviol_sd  haddock_dihedviol  \\\n",
+       "0  ...              NaN                 NaN                NaN   \n",
+       "1  ...              NaN                 NaN                NaN   \n",
        "\n",
-       "   haddock_BSA_sd  haddock_score  haddock_score_sd  \\\n",
-       "0             NaN            NaN               NaN   \n",
-       "1             NaN            NaN               NaN   \n",
+       "   haddock_dihedviol_sd  haddock_BSA  haddock_BSA_sd  haddock_score  \\\n",
+       "0                   NaN          NaN             NaN            NaN   \n",
+       "1                   NaN          NaN             NaN            NaN   \n",
        "\n",
-       "   haddock_prodigy_deltaG_kcalpermol  haddock_prodigy_dissociation_constant_M  \n",
-       "0                                NaN                                      NaN  \n",
-       "1                                NaN                                      NaN  \n",
+       "   haddock_score_sd  haddock_prodigy_deltaG_kcalpermol  \\\n",
+       "0               NaN                                NaN   \n",
+       "1               NaN                                NaN   \n",
+       "\n",
+       "   haddock_prodigy_dissociation_constant_M  \n",
+       "0                                      NaN  \n",
+       "1                                      NaN  \n",
        "\n",
        "[2 rows x 27 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "experiments = pd.read_excel('../../Experiments.xlsx', sheet_name='Experiments')\n",
+    "experiments = pd.read_excel('../../Experiments.xlsx', sheet_name='Experiments').head(2)\n",
     "antibodies = pd.read_excel('../../Experiments.xlsx', sheet_name='Antibodies')\n",
     "antigens = pd.read_excel('../../Experiments.xlsx', sheet_name='Antigens')\n",
     "\n",
-    "experiments"
+    "experiments.head()"
    ]
   },
   {
@@ -172,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,23 +228,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_config(\n",
     "      antibody_pdb = 'data/TEST_ANTIBODY.pdb',\n",
     "      antigen_pdb = 'data/TEST_ANTIGEN.pdb',\n",
-    "      reference_pdb = 'data/TEST_MATCHED.pdb',\n",
-    "      ambig_fname = \"data/ambig_TEST.tbl\",\n",
-    "      # unambig_fname = \"data/unambig_TEST.tbl\",\n",
+    "      # reference_pdb = 'data/TEST_MATCHED.pdb',\n",
+    "      ambig_fname = \"data/ambig.tbl\",\n",
+    "      # unambig_fname = \"data/unambig.tbl\",\n",
     "      output_file = 'config.cfg'\n",
     "                  ):\n",
     "    \n",
     "    config = configparser.ConfigParser()\n",
     "\n",
     "    ## Read the configuration file\n",
-    "    config.read('antibody_antigen_template.cfg')\n",
+    "    config.read('antibody_antigen_template_custom.cfg')\n",
     "\n",
     "    ## Update the configuration\n",
     "    config['main'] = {'run_dir': '\"./output\"',\n",
@@ -258,8 +262,7 @@
     "      #  'unambig_fname': f'\"{unambig_fname}\"'\n",
     "    }\n",
     "\n",
-    "    config['caprieval_1'] = {'reference_fname': f'\"{reference_pdb}\"'}\n",
-    "    config['caprieval_2'] = {'reference_fname': f'\"{reference_pdb}\"'}\n",
+    "    # config['caprieval_1'] = {'reference_fname': f'\"{reference_pdb}\"'}\n",
     "\n",
     "    config['flexref'] = {\n",
     "       'tolerance': 5,\n",
@@ -267,17 +270,13 @@
     "      #  'unambig_fname': f'\"{unambig_fname}\"'\n",
     "    }\n",
     "\n",
-    "    config['caprieval_3'] = {'reference_fname': f'\"{reference_pdb}\"'}\n",
-    "    config['caprieval_4'] = {'reference_fname': f'\"{reference_pdb}\"'}\n",
+    "    # config['caprieval_3'] = {'reference_fname': f'\"{reference_pdb}\"'}\n",
     "\n",
     "    config['emref'] = {\n",
     "       'tolerance': 5,\n",
     "       'ambig_fname': f'\"{ambig_fname}\"'#,\n",
     "      #  'unambig_fname': f'\"{unambig_fname}\"'\n",
     "    }\n",
-    "\n",
-    "    config['caprieval_5'] = {'reference_fname': f'\"{reference_pdb}\"'}\n",
-    "\n",
     " \n",
     "    ## Write the configuration to a file\n",
     "    with open(output_file, 'w') as configfile:\n",
@@ -286,12 +285,7 @@
     "    ## Replace specific lines in confi file (HACKY FIX)\n",
     "    with open(output_file, 'r') as configfile:\n",
     "      cfgdata = configfile.read()\n",
-    "    cfgdata = cfgdata.replace('[main]', '## Antibody-Antigen Docking with HADDOCK3') \\\n",
-    "                     .replace('[caprieval_1]', '[caprieval]') \\\n",
-    "                     .replace('[caprieval_2]', '[caprieval]') \\\n",
-    "                     .replace('[caprieval_3]', '[caprieval]') \\\n",
-    "                     .replace('[caprieval_4]', '[caprieval]') \\\n",
-    "                     .replace('[caprieval_5]', '[caprieval]') \\\n",
+    "    cfgdata = cfgdata.replace('[main]', '## Antibody-Antigen Docking with HADDOCK3')\n",
     "                                                                                                         \n",
     "    ## Write the file out again\n",
     "    with open(output_file, 'w') as configfile:\n",
@@ -308,25 +302,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Preparing experiment: FLD194__EPI1650\n",
+      "Preparing experiment: H5.3__EPI2800361\n",
       "\tMaking experiment folders...\n",
-      "\tCopying antibody and antigen PDB files to experiment folder...\n",
-      "\tGenerating AIR file...\n",
-      "\tGenerating config file...\n",
-      "\tDone preparing the experiment files for FLD194__EPI1650!\n",
-      "Preparing experiment: FLD194__EPI4795\n",
-      "\tMaking experiment folders...\n",
-      "\tCopying antibody and antigen PDB files to experiment folder...\n",
-      "\tGenerating AIR file...\n",
-      "\tGenerating config file...\n",
-      "\tDone preparing the experiment files for FLD194__EPI4795!\n"
+      "\tCopying antibody and antigen PDB files to experiment folder...\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../../nan'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-3d843cda439e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     19\u001b[0m     \u001b[0mantigen_pdb_filename\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbasename\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mantigen_pdb_path\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m     \u001b[0mshutil\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopyfile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mantibody_pdb_path\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34mf\"{experiment_path}{antibody_pdb_filename}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m     \u001b[0mshutil\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopyfile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mantigen_pdb_path\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34mf\"{experiment_path}{antigen_pdb_filename}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\ProgramData\\Anaconda3\\lib\\shutil.py\u001b[0m in \u001b[0;36mcopyfile\u001b[1;34m(src, dst, follow_symlinks)\u001b[0m\n\u001b[0;32m    259\u001b[0m         \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msymlink\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreadlink\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdst\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    260\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 261\u001b[1;33m         \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'rb'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mfsrc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdst\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'wb'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mfdst\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    262\u001b[0m             \u001b[1;31m# macOS\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    263\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0m_HAS_FCOPYFILE\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../../nan'"
      ]
     }
    ],
