--- a/scripts/2_structure_prep/3_fab_cdr_detection.ipynb
+++ b/scripts/2_structure_prep/3_fab_cdr_detection.ipynb
@@ -5,20 +5,18 @@
    "metadata": {},
    "source": [
     "# Fab CDR Loop Detection\n",
-    "(Using abnumber and biopandas packages)\n",
+    "This notebook helps to detect the CDR residue numbers for the Hv loops in your antibody structures.\n",
+    "It uses the BioPandas to read in PDB files, the ANARCI tool to detect the CDR loops, and the ABNUMBER tool to detect the residue numbers.\n",
     "\n",
-    "<!-- with conda:\n",
     "\n",
-    "```bash\n",
-    "conda install -c bioconda abnumber anarci\n",
-    "conda install -c conda-forge biopandas\n",
-    "```\n",
-    "\n",
-    "...or with pip -->\n",
+    "#### Running in Docker (because `anarci` is a pain to install)\n",
     "\n",
     "```bash\n",
-    "pip install biopandas git+https://github.com/prihoda/AbNumber \n",
-    "```\n"
+    "docker run -v .:/flu -it continuumio/miniconda3:24.4.0-0 /bin/bash\n",
+    "\n",
+    "conda install -c bioconda -c conda-forge abnumber anarci biopandas pandas openpyxl\n",
+    "cd /flu/scripts/2_structure_prep/\n",
+    "```"
    ]
   },
   {
@@ -81,7 +79,7 @@
    "outputs": [],
    "source": [
     "## Load PDB File\n",
-    "pdb_path = '../../data/structures/antibodies/FLD194/5a3i_chainsHandL_renumberedLplus1000.pdb'\n",
+    "pdb_path = '../../data/structures/antibodies/H5M9/4MHH_chainsAandB_renumberedLplus1000_oneAchain.pdb'\n",
     "\n",
     "pdb = PandasPdb().read_pdb(pdb_path)"
    ]
@@ -296,8 +294,10 @@
     "pdb_atoms = pdb.df['ATOM']\n",
     "\n",
     "## Filter to Fab H and L chains\n",
-    "atoms_fab_H = pdb_atoms[pdb_atoms['chain_id'] == 'H']\n",
-    "atoms_fab_L = pdb_atoms[pdb_atoms['chain_id'] == 'L']\n",
+    "# atoms_fab_H = pdb_atoms[pdb_atoms['chain_id'] == 'H']\n",
+    "# atoms_fab_L = pdb_atoms[pdb_atoms['chain_id'] == 'L']\n",
+    "atoms_fab_H = pdb_atoms[pdb_atoms['chain_id'] == 'A'][pdb_atoms['residue_number'] < 1000]\n",
+    "atoms_fab_L = pdb_atoms[pdb_atoms['chain_id'] == 'A'][pdb_atoms['residue_number'] >= 1000]\n",
     "\n",
     "atoms_fab_H.head()"
    ]
@@ -531,27 +531,31 @@
    "outputs": [],
    "source": [
     "import pandas\n",
-    "antibodies = pandas.read_excel('../../Experiments.xlsx', sheet_name='Antibodies')\n",
-    "\n",
+    "antibodies = pandas.read_excel('../../Experiments.xlsx', sheet_name='Antibodies')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for index, antibody in antibodies.iterrows():\n",
     "    antibody_id = antibody['antibody_id']\n",
-    "    pdb_path = f\"../../{antibody['antibody_pdb_path_renumbered']}\"\n",
-    "\n",
+    "    pdb_path = f\"../..{antibody['antibody_pdb_path_renumbered']}\"\n",
     "    ## Load PDB File\n",
     "    pdb = PandasPdb().read_pdb(pdb_path)\n",
     "    pdb_atoms = pdb.df['ATOM']\n",
-    "\n",
     "    ## Filter to Fab H and L chains\n",
-    "    atoms_fab_H = pdb_atoms[pdb_atoms['chain_id'] == 'H']\n",
-    "    atoms_fab_L = pdb_atoms[pdb_atoms['chain_id'] == 'L']\n",
-    "\n",
+    "    # atoms_fab_H = pdb_atoms[pdb_atoms['chain_id'] == 'H']\n",
+    "    # atoms_fab_L = pdb_atoms[pdb_atoms['chain_id'] == 'L']\n",
+    "    atoms_fab_H = pdb_atoms[pdb_atoms['chain_id'] == 'A'][pdb_atoms['residue_number'] < 1000]\n",
+    "    atoms_fab_L = pdb_atoms[pdb_atoms['chain_id'] == 'A'][pdb_atoms['residue_number'] >= 1000]\n",
     "    ## Get CDR loops' residues numbers\n",
     "    try:\n",
     "        H_cdr_residue_numbers = get_cdr_resn(atoms_fab_H, scheme = \"chothia\")\n",
     "        L_cdr_residue_numbers = get_cdr_resn(atoms_fab_L, scheme = \"chothia\")\n",
-    "\n",
     "        print(f\"{antibody_id}|`{','.join(H_cdr_residue_numbers)}|`{','.join(L_cdr_residue_numbers)}\")\n",
-    "\n",
     "    except:\n",
     "        print(f\"{antibody_id}|FAILED.\")\n"
    ]
