--- a/scripts/3_experiment_generation/1_create_experiments.ipynb
+++ b/scripts/3_experiment_generation/1_create_experiments.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -116,50 +116,81 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13D4__EPI687187</td>\n",
+       "      <td>13D4</td>\n",
+       "      <td>EPI687187</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2 rows × 27 columns</p>\n",
+       "<p>3 rows × 27 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "           experiment_id antibody_id  antigen_id  submitted  \\\n",
        "0       H5.3__EPI2800361        H5.3  EPI2800361      False   \n",
        "1  AVFluIgG01__EPI454493  AVFluIgG01   EPI454493      False   \n",
+       "2        13D4__EPI687187        13D4   EPI687187      False   \n",
        "\n",
        "   haddock_best_cluster  haddock_best_pdb_path  haddock_Nstruc  \\\n",
        "0                   NaN                    NaN             NaN   \n",
        "1                   NaN                    NaN             NaN   \n",
+       "2                   NaN                    NaN             NaN   \n",
        "\n",
        "   haddock_Evdw_plus_0.1Eelec  haddock_Evdw_plus_0.1Eelec_sd  haddock_Evdw  \\\n",
        "0                         NaN                            NaN           NaN   \n",
        "1                         NaN                            NaN           NaN   \n",
+       "2                         NaN                            NaN           NaN   \n",
        "\n",
        "   ...  haddock_AIRviol  haddock_AIRviol_sd  haddock_dihedviol  \\\n",
        "0  ...              NaN                 NaN                NaN   \n",
        "1  ...              NaN                 NaN                NaN   \n",
+       "2  ...              NaN                 NaN                NaN   \n",
        "\n",
        "   haddock_dihedviol_sd  haddock_BSA  haddock_BSA_sd  haddock_score  \\\n",
        "0                   NaN          NaN             NaN            NaN   \n",
        "1                   NaN          NaN             NaN            NaN   \n",
+       "2                   NaN          NaN             NaN            NaN   \n",
        "\n",
        "   haddock_score_sd  haddock_prodigy_deltaG_kcalpermol  \\\n",
        "0               NaN                                NaN   \n",
        "1               NaN                                NaN   \n",
+       "2               NaN                                NaN   \n",
        "\n",
        "   haddock_prodigy_dissociation_constant_M  \n",
        "0                                      NaN  \n",
        "1                                      NaN  \n",
+       "2                                      NaN  \n",
        "\n",
-       "[2 rows x 27 columns]"
+       "[3 rows x 27 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "experiments = pd.read_excel('../../Experiments.xlsx', sheet_name='Experiments').head(2)\n",
+    "experiments = pd.read_excel('../../Experiments.xlsx', sheet_name='Experiments').head(3)\n",
     "antibodies = pd.read_excel('../../Experiments.xlsx', sheet_name='Antibodies')\n",
     "antigens = pd.read_excel('../../Experiments.xlsx', sheet_name='Antigens')\n",
     "\n",
@@ -176,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +316,9 @@
     "    ## Replace specific lines in confi file (HACKY FIX)\n",
     "    with open(output_file, 'r') as configfile:\n",
     "      cfgdata = configfile.read()\n",
-    "    cfgdata = cfgdata.replace('[main]', '## Antibody-Antigen Docking with HADDOCK3')\n",
+    "    cfgdata = cfgdata.replace('[main]', '## Antibody-Antigen Docking with HADDOCK3') \\\n",
+    "                     .replace('[seletop_0]', '[seletop]') \\\n",
+    "                     .replace('[seletop_1]', '[seletop]') \\\n",
     "                                                                                                         \n",
     "    ## Write the file out again\n",
     "    with open(output_file, 'w') as configfile:\n",
@@ -302,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -311,19 +344,22 @@
      "text": [
       "Preparing experiment: H5.3__EPI2800361\n",
       "\tMaking experiment folders...\n",
-      "\tCopying antibody and antigen PDB files to experiment folder...\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '../../nan'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-8-3d843cda439e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     19\u001b[0m     \u001b[0mantigen_pdb_filename\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbasename\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mantigen_pdb_path\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m     \u001b[0mshutil\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopyfile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mantibody_pdb_path\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34mf\"{experiment_path}{antibody_pdb_filename}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m     \u001b[0mshutil\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopyfile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mantigen_pdb_path\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34mf\"{experiment_path}{antigen_pdb_filename}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\ProgramData\\Anaconda3\\lib\\shutil.py\u001b[0m in \u001b[0;36mcopyfile\u001b[1;34m(src, dst, follow_symlinks)\u001b[0m\n\u001b[0;32m    259\u001b[0m         \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msymlink\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreadlink\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdst\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    260\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 261\u001b[1;33m         \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'rb'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mfsrc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdst\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'wb'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mfdst\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    262\u001b[0m             \u001b[1;31m# macOS\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    263\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0m_HAS_FCOPYFILE\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../../nan'"
+      "\tCopying antibody and antigen PDB files to experiment folder...\n",
+      "\tGenerating AIR file...\n",
+      "\tGenerating config file...\n",
+      "\tDone preparing the experiment files for H5.3__EPI2800361!\n",
+      "Preparing experiment: AVFluIgG01__EPI454493\n",
+      "\tMaking experiment folders...\n",
+      "\tCopying antibody and antigen PDB files to experiment folder...\n",
+      "\tGenerating AIR file...\n",
+      "\tGenerating config file...\n",
+      "\tDone preparing the experiment files for AVFluIgG01__EPI454493!\n",
+      "Preparing experiment: 13D4__EPI687187\n",
+      "\tMaking experiment folders...\n",
+      "\tCopying antibody and antigen PDB files to experiment folder...\n",
+      "\tGenerating AIR file...\n",
+      "\tGenerating config file...\n",
+      "\tDone preparing the experiment files for 13D4__EPI687187!\n"
      ]
     }
    ],
@@ -345,15 +381,15 @@
     "    print(f\"\\tCopying antibody and antigen PDB files to experiment folder...\")\n",
     "    antibody_pdb_path = f\"../../{antibody['antibody_pdb_path_renumbered']}\"\n",
     "    antibody_pdb_filename = os.path.basename(antibody_pdb_path)\n",
-    "    antigen_pdb_path = f\"../../{antigen['antigen_pdb_path']}\"\n",
+    "    antigen_pdb_path = f\"../../{antigen['antigen_pdb_path_renumbered']}\"\n",
     "    antigen_pdb_filename = os.path.basename(antigen_pdb_path)\n",
     "\n",
     "    shutil.copyfile(antibody_pdb_path, f\"{experiment_path}{antibody_pdb_filename}\")\n",
     "    shutil.copyfile(antigen_pdb_path, f\"{experiment_path}{antigen_pdb_filename}\")\n",
     "\n",
     "    ## Copy reference PDB file to experiment folder\n",
-    "    reference_pdb_filename = '5a3i_chainsACD.pdb'\n",
-    "    shutil.copyfile(reference_pdb_filename, f\"{experiment_path}{reference_pdb_filename}\")\n",
+    "    # reference_pdb_filename = '5a3i_chainsACD.pdb'\n",
+    "    # shutil.copyfile(reference_pdb_filename, f\"{experiment_path}{reference_pdb_filename}\")\n",
     "\n",
     "    ## Generate AIR file for each experiment using active and passive residues\n",
     "    active1 = antibody['antibody_active_residues'].replace('`','').split(',')\n",
@@ -373,7 +409,7 @@
     "    create_config(\n",
     "      antibody_pdb = antibody_pdb_filename,\n",
     "      antigen_pdb = antigen_pdb_filename,\n",
-    "      reference_pdb = reference_pdb_filename,\n",
+    "      # reference_pdb = reference_pdb_filename,\n",
     "      ambig_fname = air_file_name,\n",
     "      # unambig_fname = \"data/unambig_TEST.tbl\",\n",
     "      output_file = f\"{experiment_path}config.cfg\")\n",
