Fix config.cfg generation to use mdref

--- a/scripts/3_experiment_generation/1_create_experiments.ipynb
+++ b/scripts/3_experiment_generation/1_create_experiments.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "[3 rows x 27 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,31 +289,25 @@
     "    \n",
     "    config['rigidbody'] = {\n",
     "       'tolerance': 5,\n",
-    "       'ambig_fname': f'\"{ambig_fname}\"'#,\n",
-    "      #  'unambig_fname': f'\"{unambig_fname}\"'\n",
+    "       'sampling': 200,\n",
+    "       'ambig_fname': f'\"{ambig_fname}\"'\n",
     "    }\n",
-    "\n",
-    "    # config['caprieval_1'] = {'reference_fname': f'\"{reference_pdb}\"'}\n",
     "\n",
     "    config['flexref'] = {\n",
     "       'tolerance': 5,\n",
-    "       'ambig_fname': f'\"{ambig_fname}\"'#,\n",
-    "      #  'unambig_fname': f'\"{unambig_fname}\"'\n",
+    "       'ambig_fname': f'\"{ambig_fname}\"'\n",
     "    }\n",
     "\n",
-    "    # config['caprieval_3'] = {'reference_fname': f'\"{reference_pdb}\"'}\n",
-    "\n",
-    "    config['emref'] = {\n",
+    "    config['mdref'] = {\n",
     "       'tolerance': 5,\n",
-    "       'ambig_fname': f'\"{ambig_fname}\"'#,\n",
-    "      #  'unambig_fname': f'\"{unambig_fname}\"'\n",
+    "       'ambig_fname': f'\"{ambig_fname}\"'\n",
     "    }\n",
     " \n",
     "    ## Write the configuration to a file\n",
     "    with open(output_file, 'w') as configfile:\n",
     "        config.write(configfile)\n",
     "\n",
-    "    ## Replace specific lines in confi file (HACKY FIX)\n",
+    "    ## Replace specific lines in config file (HACKY FIX)\n",
     "    with open(output_file, 'r') as configfile:\n",
     "      cfgdata = configfile.read()\n",
     "    cfgdata = cfgdata.replace('[main]', '## Antibody-Antigen Docking with HADDOCK3') \\\n",
@@ -335,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
