--- a/scripts/3_experiment_generation/1_create_experiments.ipynb
+++ b/scripts/3_experiment_generation/1_create_experiments.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "[3 rows x 27 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,28 +280,13 @@
     "    ## Update the configuration\n",
     "    config['main'] = {'run_dir': '\"./output\"',\n",
     "                      'mode': '\"local\"',\n",
-    "                      'concat':  5,\n",
-    "                      'queue_limit': 100,\n",
+    "                      'ncores': 36,\n",
+    "                     #  'concat':  5,\n",
+    "                     #  'queue_limit': 100,\n",
     "                      'molecules': [\n",
     "                            antibody_pdb,\n",
     "                            antigen_pdb\n",
     "                            ]}\n",
-    "    \n",
-    "    config['rigidbody'] = {\n",
-    "       'tolerance': 5,\n",
-    "       'sampling': 200,\n",
-    "       'ambig_fname': f'\"{ambig_fname}\"'\n",
-    "    }\n",
-    "\n",
-    "    config['flexref'] = {\n",
-    "       'tolerance': 5,\n",
-    "       'ambig_fname': f'\"{ambig_fname}\"'\n",
-    "    }\n",
-    "\n",
-    "    config['mdref'] = {\n",
-    "       'tolerance': 5,\n",
-    "       'ambig_fname': f'\"{ambig_fname}\"'\n",
-    "    }\n",
     " \n",
     "    ## Write the configuration to a file\n",
     "    with open(output_file, 'w') as configfile:\n",
@@ -311,8 +296,11 @@
     "    with open(output_file, 'r') as configfile:\n",
     "      cfgdata = configfile.read()\n",
     "    cfgdata = cfgdata.replace('[main]', '## Antibody-Antigen Docking with HADDOCK3') \\\n",
-    "                     .replace('[seletop_0]', '[seletop]') \\\n",
-    "                     .replace('[seletop_1]', '[seletop]') \\\n",
+    "                    .replace('[clustfcc_0]', '[clustfcc]') \\\n",
+    "                    .replace('[clustfcc_1]', '[clustfcc]') \\\n",
+    "                    .replace('[clustfcc_2]', '[clustfcc]') \\\n",
+    "                    .replace('[seletopclusts_0]', '[seletopclusts]') \\\n",
+    "                    .replace('[seletopclusts_1]', '[seletopclusts]')\n",
     "                                                                                                         \n",
     "    ## Write the file out again\n",
     "    with open(output_file, 'w') as configfile:\n",
@@ -329,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
